welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: not found: type EST
  if(getDirection:EST){
                  ^